Complete native desktop backends and distribution integration
Assisted-by: grok-build:grok-4.6